Fixed project spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -217,8 +217,6 @@
     margin-bottom: 50px;
   }
 
-
-
   #contactCard {
     width: fit-content;
     display: flex;
@@ -234,7 +232,6 @@
   .container {
     position: relative;
     width: 20px;
-    border-style: solid;
   }
 
 .image {
